--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ sitemap:
 				<!-- Intro -->
 					<div id="intro">
             <h1>{{site.title}}</h1>
-						<h2>The Jekyll Theme Version</h2>
-						<p>Massively is an HTML5 website theme designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
+						<h2>大概是没事儿闲的</h2>
+						<!--p>Massively is an HTML5 website theme designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
 						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. Jekyll integration by <a href="https://somiibo.com">Somiibo</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
+						</ul-->
 					</div>
 
 				<!-- Header -->
@@ -60,7 +60,7 @@ sitemap:
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">Massively is a versatile Jekyll theme</a></h2>
-									<p>With only a few edits, you can have a stunningly beautiful website <br />
+									<!--p>With only a few edits, you can have a stunningly beautiful website <br />
                     nearly out of the box. Of course... you can always take it further <br />
                     and make it something even more amazing!</p>
 								</header>
@@ -72,7 +72,7 @@ sitemap:
 								</p>
 								<p>
 									In this manner, content in itself is a standout amongst the best promoting apparatuses in your whole advertising toolbox! Rather than making your content around your promoting technique, it's limitlessly more productive to fabricate your showcasing around your content.
-								 </p>
+								 </p -->
 
 							</article>
 
@@ -106,7 +106,7 @@ sitemap:
 						<!-- Footer -->
 							<footer>
                 <ul class="actions">
-                  <li><a href="{{ "/blog/" | absolute_url }}" class="button">Our Blog</a></li>
+                  <!--li><a href="{{ "/blog/" | absolute_url }}" class="button">Our Blog</a></li -->
                 </ul>
 							</footer>
 
